--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@popperjs/core": "^2.9.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "bootstrap-suggest": "^2.1.0",
     "core-js": "^3.9.1",
     "cors": "^2.8.5",
+    "country-state-city": "^2.1.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "regenerator-runtime": "^0.13.7",
     "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0"
