--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "dotenv": "^8.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss": "^8.2.8",
