add comment and delete unuse js module and refactor error handling

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "regenerator-runtime": "^0.13.7",
+    "toastify-js": "^1.11.0",
     "webpack": "^5.27.1",
     "webpack-cli": "^4.5.0"
   },
