--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server/index.js"
+    "start": "node src/server/local.js",
+    "slsd": "serverless deploy",
+    "slsr": "serverless remove"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vendia/serverless-express": "^4.3.9",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "serverless": "^2.52.0"
   }
 }
