--- a/package.json
+++ b/package.json
@@ -1,55 +1,62 @@
 {
-  "name": "travel-app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "node src/server/server/server.js",
-    "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack serve --config webpack.dev.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.9.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.0",
-    "bootstrap-suggest": "^2.1.0",
-    "core-js": "^3.9.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jquery": "^3.6.0",
-    "regenerator-runtime": "^0.13.7",
-    "toastify-js": "^1.11.0",
-    "webpack": "^5.27.1",
-    "webpack-cli": "^4.5.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.1.3",
-    "dotenv": "^8.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.9",
-    "postcss": "^8.2.8",
-    "postcss-loader": "^5.2.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "supertest": "^6.1.3",
-    "webpack-dev-server": "^3.11.2",
-    "workbox-webpack-plugin": "^6.1.2"
-  }
+	"name": "travel-app",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"server": "node src/server/server/server.js",
+		"build": "webpack --config webpack.prod.js",
+		"dev": "webpack serve --config webpack.dev.js",
+		"style:fix": "npx prettier --write ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"jest": {
+		"coveragePathIgnorePatterns": [
+			"/node_modules/"
+		]
+	},
+	"dependencies": {
+		"@popperjs/core": "^2.9.1",
+		"axios": "^0.21.1",
+		"bootstrap": "^5.0.0",
+		"bootstrap-suggest": "^2.1.0",
+		"core-js": "^3.9.1",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"jquery": "^3.6.0",
+		"regenerator-runtime": "^0.13.7",
+		"toastify-js": "^1.11.0",
+		"webpack": "^5.27.1",
+		"webpack-cli": "^4.5.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.13.10",
+		"@babel/preset-env": "^7.13.10",
+		"autoprefixer": "^10.2.5",
+		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^5.1.3",
+		"dotenv": "^8.2.0",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.3.1",
+		"jest": "^26.6.3",
+		"mini-css-extract-plugin": "^1.3.9",
+		"postcss": "^8.2.8",
+		"postcss-loader": "^5.2.0",
+		"prettier": "^2.6.2",
+		"sass": "^1.32.8",
+		"sass-loader": "^11.0.1",
+		"style-loader": "^2.0.0",
+		"supertest": "^6.1.3",
+		"webpack-dev-server": "^3.11.2",
+		"workbox-webpack-plugin": "^6.1.2"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead"
+	]
 }
