--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"description": "",
 	"jest": {
+		"testEnvironment": "jsdom",
 		"coveragePathIgnorePatterns": [
 			"/node_modules/"
 		]
@@ -43,6 +44,7 @@
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^28.1.0",
+		"jest-environment-jsdom": "^28.1.0",
 		"license-webpack-plugin": "^4.0.2",
 		"mini-css-extract-plugin": "^2.6.0",
 		"postcss": "^8.4.14",
