--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jest": "^28.1.0",
 		"jest-environment-jsdom": "^28.1.0",
 		"license-webpack-plugin": "^4.0.2",
+		"luxon": "^2.4.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"postcss": "^8.4.14",
 		"postcss-loader": "^7.0.0",
@@ -55,6 +56,7 @@
 		"style-loader": "^3.3.1",
 		"supertest": "^6.2.3",
 		"webpack-dev-server": "^4.9.1",
+		"webpack-version-file": "^0.1.6",
 		"workbox-webpack-plugin": "^6.5.3"
 	},
 	"browserslist": [
