--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"sass-loader": "^13.0.0",
 		"style-loader": "^3.3.1",
 		"supertest": "^6.2.3",
+		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-dev-server": "^4.9.1",
 		"webpack-version-file": "^0.1.6",
 		"workbox-webpack-plugin": "^6.5.3"
