--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,18 @@
 		":prConcurrentLimitNone",
 		":prHourlyLimitNone",
 		":timezone(Asia/Tokyo)",
-		":doNotPinPackage(@popperjs/core)"
+		":doNotPinPackage(@popperjs/core)",
+		":doNotPinPackage(axios)",
+		":doNotPinPackage(bootstrap)",
+		":doNotPinPackage(bootstrap-suggest)",
+		":doNotPinPackage(core-js)",
+		":doNotPinPackage(cors)",
+		":doNotPinPackage(express)",
+		":doNotPinPackage(jquery)",
+		":doNotPinPackage(regenerator-runtime)",
+		":doNotPinPackage(toastify-js)",
+		":doNotPinPackage(webpack)",
+		":doNotPinPackage(webpack-cli)"
 	],
 	"labels": ["renovate"],
 	"enabledManagers": ["npm"],
