--- a/renovate.json
+++ b/renovate.json
@@ -4,21 +4,10 @@
 		"config:base",
 		"group:allNonMajor",
 		":separateMultipleMajorReleases",
+		"schedule:daily",
 		":prConcurrentLimitNone",
 		":prHourlyLimitNone",
-		":timezone(Asia/Tokyo)",
-		":doNotPinPackage(@popperjs/core)",
-		":doNotPinPackage(axios)",
-		":doNotPinPackage(bootstrap)",
-		":doNotPinPackage(bootstrap-suggest)",
-		":doNotPinPackage(core-js)",
-		":doNotPinPackage(cors)",
-		":doNotPinPackage(express)",
-		":doNotPinPackage(jquery)",
-		":doNotPinPackage(regenerator-runtime)",
-		":doNotPinPackage(toastify-js)",
-		":doNotPinPackage(webpack)",
-		":doNotPinPackage(webpack-cli)"
+		":timezone(Asia/Tokyo)"
 	],
 	"labels": ["renovate"],
 	"enabledManagers": ["npm"],
