--- a/package.json
+++ b/package.json
@@ -20,45 +20,45 @@
 		]
 	},
 	"dependencies": {
-		"@popperjs/core": "^2.11.5",
-		"axios": "^0.27.2",
-		"bootstrap": "^5.1.3",
-		"bootstrap-suggest": "^2.1.0",
-		"core-js": "^3.22.8",
-		"cors": "^2.8.5",
-		"express": "^4.18.1",
-		"jquery": "^3.6.0",
-		"regenerator-runtime": "^0.13.9",
-		"toastify-js": "^1.11.2",
-		"webpack": "^5.73.0",
-		"webpack-cli": "^4.9.2"
+		"@popperjs/core": "2.11.5",
+		"axios": "0.27.2",
+		"bootstrap": "5.1.3",
+		"bootstrap-suggest": "2.1.0",
+		"core-js": "3.22.8",
+		"cors": "2.8.5",
+		"express": "4.18.1",
+		"jquery": "3.6.0",
+		"regenerator-runtime": "0.13.9",
+		"toastify-js": "1.11.2",
+		"webpack": "5.73.0",
+		"webpack-cli": "4.9.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.18.2",
-		"@babel/preset-env": "^7.18.2",
+		"@babel/core": "7.18.2",
+		"@babel/preset-env": "7.18.2",
 		"autoprefixer": "10.4.5",
-		"babel-loader": "^8.2.5",
-		"clean-webpack-plugin": "^4.0.0",
-		"css-loader": "^6.7.1",
-		"dotenv": "^16.0.1",
-		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^5.5.0",
-		"jest": "^28.1.0",
-		"jest-environment-jsdom": "^28.1.0",
-		"license-webpack-plugin": "^4.0.2",
-		"luxon": "^2.4.0",
-		"mini-css-extract-plugin": "^2.6.0",
-		"postcss": "^8.4.14",
-		"postcss-loader": "^7.0.0",
-		"prettier": "^2.6.2",
-		"sass": "^1.52.2",
-		"sass-loader": "^13.0.0",
-		"style-loader": "^3.3.1",
-		"supertest": "^6.2.3",
-		"webpack-bundle-analyzer": "^4.5.0",
-		"webpack-dev-server": "^4.9.1",
-		"webpack-version-file": "^0.1.6",
-		"workbox-webpack-plugin": "^6.5.3"
+		"babel-loader": "8.2.5",
+		"clean-webpack-plugin": "4.0.0",
+		"css-loader": "6.7.1",
+		"dotenv": "16.0.1",
+		"file-loader": "6.2.0",
+		"html-webpack-plugin": "5.5.0",
+		"jest": "28.1.0",
+		"jest-environment-jsdom": "28.1.0",
+		"license-webpack-plugin": "4.0.2",
+		"luxon": "2.4.0",
+		"mini-css-extract-plugin": "2.6.0",
+		"postcss": "8.4.14",
+		"postcss-loader": "7.0.0",
+		"prettier": "2.6.2",
+		"sass": "1.52.2",
+		"sass-loader": "13.0.0",
+		"style-loader": "3.3.1",
+		"supertest": "6.2.3",
+		"webpack-bundle-analyzer": "4.5.0",
+		"webpack-dev-server": "4.9.1",
+		"webpack-version-file": "0.1.6",
+		"workbox-webpack-plugin": "6.5.3"
 	},
 	"browserslist": [
 		"> 1%",
