chore: renovateにrangeStrategy bumpを追加

--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,48 @@
 			"description": "Automerge non-major updates",
 			"matchUpdateTypes": ["minor", "patch"],
 			"automerge": true
+		},
+		{
+			"matchPackageNames": [
+				"@popperjs/core",
+				"axios",
+				"bootstrap",
+				"bootstrap-suggest",
+				"core-js",
+				"cors",
+				"express",
+				"jquery",
+				"regenerator-runtime",
+				"toastify-js",
+				"webpack",
+				"webpack-cli",
+				"@babel/core",
+				"@babel/preset-env",
+				"autoprefixer",
+				"babel-loader",
+				"clean-webpack-plugin",
+				"css-loader",
+				"dotenv",
+				"file-loader",
+				"html-webpack-plugin",
+				"jest",
+				"jest-environment-jsdom",
+				"license-webpack-plugin",
+				"luxon",
+				"mini-css-extract-plugin",
+				"postcss",
+				"postcss-loader",
+				"prettier",
+				"sass",
+				"sass-loader",
+				"style-loader",
+				"supertest",
+				"webpack-bundle-analyzer",
+				"webpack-dev-server",
+				"webpack-version-file",
+				"workbox-webpack-plugin"
+			],
+			"rangeStrategy": "bump"
 		}
 	],
 	"ignoreDeps": [""]
