--- a/package.json
+++ b/package.json
@@ -20,45 +20,46 @@
 		]
 	},
 	"dependencies": {
-		"@popperjs/core": "2.11.8",
-		"axios": "1.4.0",
-		"bootstrap": "5.3.0",
-		"bootstrap-suggest": "2.1.0",
-		"core-js": "3.31.1",
-		"cors": "2.8.5",
-		"express": "4.18.2",
-		"jquery": "3.7.0",
-		"regenerator-runtime": "0.13.11",
-		"toastify-js": "1.12.0",
-		"webpack": "5.88.1",
-		"webpack-cli": "5.1.4"
+		"@popperjs/core": "^2.11.8",
+		"axios": "^1.4.0",
+		"bootstrap": "^5.3.0",
+		"bootstrap-suggest": "^2.1.0",
+		"core-js": "^3.31.1",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"jquery": "^3.7.0",
+		"regenerator-runtime": "^0.13.11",
+		"toastify-js": "^1.12.0",
+		"webpack": "^5.88.1",
+		"webpack-cli": "^5.1.4"
 	},
 	"devDependencies": {
-		"@babel/core": "7.22.9",
-		"@babel/preset-env": "7.22.9",
-		"autoprefixer": "10.4.14",
-		"babel-loader": "9.1.3",
-		"clean-webpack-plugin": "4.0.0",
-		"css-loader": "6.8.1",
-		"dotenv": "16.3.1",
-		"file-loader": "6.2.0",
-		"html-webpack-plugin": "5.5.3",
-		"jest": "29.6.1",
-		"jest-environment-jsdom": "29.6.1",
-		"license-webpack-plugin": "4.0.2",
-		"luxon": "3.3.0",
-		"mini-css-extract-plugin": "2.7.6",
-		"postcss": "8.4.26",
-		"postcss-loader": "7.3.3",
-		"prettier": "3.0.0",
-		"sass": "1.63.6",
-		"sass-loader": "13.3.2",
-		"style-loader": "3.3.3",
-		"supertest": "6.3.3",
-		"webpack-bundle-analyzer": "4.9.0",
-		"webpack-dev-server": "4.15.1",
-		"webpack-version-file": "0.1.7",
-		"workbox-webpack-plugin": "7.0.0"
+		"@babel/core": "^7.22.9",
+		"@babel/preset-env": "^7.22.9",
+		"autoprefixer": "^10.4.14",
+		"babel-loader": "^9.1.3",
+		"clean-webpack-plugin": "^4.0.0",
+		"css-loader": "^6.8.1",
+		"dotenv": "^16.3.1",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.5.3",
+		"jest": "^29.6.1",
+		"jest-environment-jsdom": "^29.6.1",
+		"license-webpack-plugin": "^4.0.2",
+		"luxon": "^3.3.0",
+		"mini-css-extract-plugin": "^2.7.6",
+		"npm-check-updates": "^16.10.17",
+		"postcss": "^8.4.26",
+		"postcss-loader": "^7.3.3",
+		"prettier": "^3.0.0",
+		"sass": "^1.63.6",
+		"sass-loader": "^13.3.2",
+		"style-loader": "^3.3.3",
+		"supertest": "^6.3.3",
+		"webpack-bundle-analyzer": "^4.9.0",
+		"webpack-dev-server": "^4.15.1",
+		"webpack-version-file": "^0.1.7",
+		"workbox-webpack-plugin": "^7.0.0"
 	},
 	"browserslist": [
 		"> 1%",
